--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -9,13 +9,12 @@ services:
     tty: true
     depends_on: 
       - apiauth
-      - redis
       - pg
       - pgadmin
       - portainer
     volumes: 
       # remember!!!!!!! add trust proxy to nodejs services
-      - ../app/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro #read only 
+      - ./default.conf:/etc/nginx/conf.d/default.conf:ro #read only 
 
   portainer:
     image: portainer/portainer-ce
@@ -28,7 +27,7 @@ services:
     image: 'postgres:13.2-alpine'
     volumes: 
       - pgvol:/var/lib/postgresql/data 
-      - ../app/services/db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   pgadmin:
     image: 'dpage/pgadmin4'
@@ -38,11 +37,10 @@ services:
 
   api:
     build: 
-      context: ../app/services/auth
+      context: ../
     restart: always
     depends_on:
       - pg
-      - redis
 
 volumes: 
   pgvol:
