--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - 443:443
     tty: true
     depends_on: 
-      - apiauth
+      - api
       - pg
       - pgadmin
       - portainer
