--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -28,11 +28,11 @@ services:
 
   api:
     build: 
-      dockerfile: ../Dockerfile
+      dockerfile: ../api/Dockerfile
     stdin_open: true
     volumes: 
       - /app/node_modules 
-      - ../:/app
+      - ../api:/app
     environment:
       - PORT=5000
       - DBURL=pg
@@ -40,6 +40,6 @@ services:
       - NODE_ENV=development
       - PGPASS=secret
       - PGUSER=root
-      - CORS=http://localhost:3000
+      - CORS=http://localhost:5000
     ports: 
       - 5000:5000
