more on , ready to dive in logic , infra done for now

--- a/infra/docker-compose.dev.yml
+++ b/infra/docker-compose.dev.yml
@@ -23,16 +23,16 @@ services:
     environment: 
       - PGADMIN_DEFAULT_EMAIL=nazemi.works@gmail.com
       - PGADMIN_DEFAULT_PASSWORD=secret
-    ports: 
-      - 80:80
+    # ports: 
+    #   - 80:80
 
   api:
     build: 
-      dockerfile: ../api/Dockerfile
+      dockerfile: ../service/Dockerfile
     stdin_open: true
     volumes: 
       - /app/node_modules 
-      - ../api:/app
+      - ../service:/app
     environment:
       - PORT=5000
       - DBURL=pg
