--- a/infra/default.conf
+++ b/infra/default.conf
@@ -1,4 +1,7 @@
-# proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=STATIC:10m inactive=7d use_temp_path=off;
+upstream kibana {
+  server kibana:5601;
+}
+
 
 server {
   listen 80 default_server;
@@ -18,6 +21,31 @@ server {
     # proxy_set_header X-Forwarded-Proto http;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_redirect off;
+  }
+
+  location /__info__/kibana {
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
+    
+    proxy_pass http://kibana;
+    proxy_redirect off;
+    rewrite ^/__info__/kibana/(.*)$ /$1 break;
+  }
+
+
+  location /__info__/elasticsearch/ {
+    # auth_basic "Restricted Access";
+    # auth_basic_user_file /etc/nginx/htpasswd.users;
+    proxy_http_version 1.1;
+    # proxy_set_header Host $host;
+    proxy_set_header Connection "Keep-Alive";
+    proxy_set_header Proxy-Connection "Keep-Alive";
+    proxy_pass http://elasticsearch:9200/;
+    proxy_redirect off;
+    proxy_buffering off;
   }
 
   location /__info__/portainer/ {
